--- a/releases/com/rambi/index.html
+++ b/releases/com/rambi/index.html
@@ -4,8 +4,8 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="jutt/">jutt/</a>
 <a href="rambi/">rambi/</a>
+<a href="rambi-engine/">rambi-engine/</a>
 </pre>
 </body>
 </html>
