Octo Helper 0.1-aplha

--- a/releases/br/com/index.html
+++ b/releases/br/com/index.html
@@ -4,8 +4,7 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="br/">br/</a>
-<a href="com/">com/</a>
+<a href="octohelper/">octohelper/</a>
 </pre>
 </body>
 </html>
