--- a/releases/br/com/ez/index.html
+++ b/releases/br/com/ez/index.html
@@ -4,8 +4,7 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="ez/">ez/</a>
-<a href="octohelper/">octohelper/</a>
+<a href="dj/">dj/</a>
 </pre>
 </body>
 </html>
