--- a/releases/com/jutt/index.html
+++ b/releases/com/jutt/index.html
@@ -5,6 +5,8 @@
 <pre>
 <a href="../">../</a>
 <a href="jutt/">jutt/</a>
+<a href="jutt-parent/">jutt-parent/</a>
+<a href="jutt-tests/">jutt-tests/</a>
 </pre>
 </body>
 </html>
