--- a/releases/org/index.html
+++ b/releases/org/index.html
@@ -4,9 +4,7 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="br/">br/</a>
-<a href="com/">com/</a>
-<a href="org/">org/</a>
+<a href="eck/">eck/</a>
 </pre>
 </body>
 </html>
