adding locomotive 1.0.2-ALPHA

--- a/releases/br/com/ez/dj/1.1/index.html
+++ b/releases/br/com/ez/dj/1.1/index.html
@@ -10,6 +10,9 @@
 <a href="dj-1.1.pom">dj-1.1.pom</a>
 <a href="dj-1.1.pom.md5">dj-1.1.pom.md5</a>
 <a href="dj-1.1.pom.sha1">dj-1.1.pom.sha1</a>
+<a href="dj-1.1-sources.jar">dj-1.1-sources.jar</a>
+<a href="dj-1.1-sources.jar.md5">dj-1.1-sources.jar.md5</a>
+<a href="dj-1.1-sources.jar.sha1">dj-1.1-sources.jar.sha1</a>
 </pre>
 </body>
 </html>
