--- a/releases/org/eck/locomotive/index.html
+++ b/releases/org/eck/locomotive/index.html
@@ -5,6 +5,7 @@
 <pre>
 <a href="../">../</a>
 <a href="1.0.1-ALPHA/">1.0.1-ALPHA/</a>
+<a href="1.0.2-ALPHA/">1.0.2-ALPHA/</a>
 <a href="maven-metadata.xml">maven-metadata.xml</a>
 <a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a>
 <a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a>
