--- a/releases/org/eck/index.html
+++ b/releases/org/eck/index.html
@@ -4,6 +4,7 @@
 <hr/>
 <pre>
 <a href="../">../</a>
+<a href="correiostools/">correiostools/</a>
 <a href="locomotive/">locomotive/</a>
 <a href="yno/">yno/</a>
 </pre>
