--- a/releases/org/eck/index.html
+++ b/releases/org/eck/index.html
@@ -5,6 +5,7 @@
 <pre>
 <a href="../">../</a>
 <a href="correiostools/">correiostools/</a>
+<a href="gas/">gas/</a>
 <a href="locomotive/">locomotive/</a>
 <a href="yno/">yno/</a>
 </pre>
