--- a/releases/org/eck/index.html
+++ b/releases/org/eck/index.html
@@ -7,6 +7,7 @@
 <a href="correiostools/">correiostools/</a>
 <a href="gas/">gas/</a>
 <a href="jgr/">jgr/</a>
+<a href="json/">json/</a>
 <a href="locomotive/">locomotive/</a>
 <a href="yno/">yno/</a>
 </pre>
