adding scripts tasks

--- a/releases/org/eck/index.html
+++ b/releases/org/eck/index.html
@@ -9,6 +9,7 @@
 <a href="jgr/">jgr/</a>
 <a href="json/">json/</a>
 <a href="locomotive/">locomotive/</a>
+<a href="mojo/">mojo/</a>
 <a href="yno/">yno/</a>
 </pre>
 </body>
