--- a/releases/org/eck/index.html
+++ b/releases/org/eck/index.html
@@ -10,6 +10,7 @@
 <a href="json/">json/</a>
 <a href="locomotive/">locomotive/</a>
 <a href="mojo/">mojo/</a>
+<a href="navigatorr/">navigatorr/</a>
 <a href="spec/">spec/</a>
 <a href="yno/">yno/</a>
 </pre>
